Causeview Package Complete/src/objects/Gift__c.object
<CustomObject>
    <description>Causeview - Any financial transactions including: gifts, product purchases, event registrations, membership renewals, etc.</description>
    <fields>
        <fullName>Acknowledgement_Recipient_Email__c</fullName>
        <description>Email address acknowledgements are sent to.</description>
        <inlineHelpText>Email address acknowledgements are sent to.</inlineHelpText>
        <label>Acknowledgement Recipient Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Affiliated_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Initial Gift made by this contact on behalf of the Organization</inlineHelpText>
        <label>Affiliated Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Transactions (Affiliated Contact)</relationshipLabel>
        <relationshipName>Transactions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Allocation_Count__c</fullName>
        <description>Total number of allocations.  Used for reconciliation against payments.</description>
        <label>Allocation Count</label>
        <summaryForeignKey>Gift_Detail__c.Gift__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <description>Rollup of all payments with Status = Approved, Deposited, Refunded</description>
        <inlineHelpText>Sum of all payments with status (Approved, Deposited, Refunded)</inlineHelpText>
        <label>Approved Amount</label>
        <summarizedField>Payment__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Payment__c.Status__c</field>
            <operation>equals</operation>
            <value>Approved, Deposited, Refunded, Invoiced</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Payment__c.Amount__c</field>
            <operation>notEqual</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>Payment__c.Donation__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Anonymous__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Anonymous</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attendee_Names_Pending__c</fullName>
        <description>Number of attendee names still pending</description>
        <formula>IF(Total_Attendees_Purchased__c -  Attendee_Names_Received__c &gt; 0, Total_Attendees_Purchased__c -  Attendee_Names_Received__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of attendee names still pending</inlineHelpText>
        <label>Attendee Names Pending</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Attendee_Names_Received__c</fullName>
        <description>Number of attendee names received</description>
        <inlineHelpText>Number of attendee names received</inlineHelpText>
        <label>Attendee Names Received</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Authorization__c</fullName>
        <label>Authorization # (dep)</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Batch_Status__c</fullName>
        <label>Batch Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Committed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Receipted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <picklist>
            <picklistValues>
                <fullName>Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Person</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Consolidated_Rcpt__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Receipt for all gifts consolidated for year end.</description>
        <label>Consolidated Receipt</label>
        <referenceTo>Receipt__c</referenceTo>
        <relationshipLabel>Gifts</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ConstituentType__c</fullName>
        <inlineHelpText>Whether a new Constituent is created for this Gift record or Constituent was already existed.</inlineHelpText>
        <label>Constituent Type</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Constituent_Address__c</fullName>
        <description>Address of either individual or organization.  Used with acknowledgement templates.</description>
        <formula>IF (ISBLANK( Organization__c), 

Constituent__r.MailingStreet &amp; BR() &amp;
Constituent__r.MailingCity &amp; &quot;, &quot; &amp;  Constituent__r.MailingState &amp; BR() &amp;
Constituent__r.MailingPostalCode,

Organization__r.BillingStreet &amp; BR() &amp;
Organization__r.BillingCity &amp; &quot;, &quot; &amp;  Organization__r.BillingState &amp; BR() &amp;
Organization__r.BillingPostalCode 

)</formula>
        <label>Constituent Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Constituent_FirstName__c</fullName>
        <formula>if(isblank(Organization__c),Constituent__r.FirstName, Organization__r.Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Constituent FirstName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Constituent_Name__c</fullName>
        <description>Used for merging with acknowledgement templates</description>
        <formula>IF(ISBLANK( Organization__c ),    
  (IF (ISBLANK(Constituent__r.Primary_Salutation__c),  Constituent__r.FirstName &amp; &quot; &quot; &amp; Constituent__r.LastName, Constituent__r.Primary_Salutation__c)),  Organization__r.Name )</formula>
        <inlineHelpText>Used for merging with acknowledgement templates</inlineHelpText>
        <label>Constituent Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Constituent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Individual</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Transactions (Constituent)</relationshipLabel>
        <relationshipName>Gifts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Number__c</fullName>
        <description>Masked credit card number</description>
        <inlineHelpText>Masked credit card number</inlineHelpText>
        <label>Credit Card Number</label>
        <length>100</length>
        <maskChar>asterisk</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Type__c</fullName>
        <description>Payment credit card type</description>
        <inlineHelpText>Payment credit card type</inlineHelpText>
        <label>Credit Card Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of Transaction.</description>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Discounted_Price__c</fullName>
        <formula>Promotion_Code__r.Discounted_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discounted Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Event_Id__c</fullName>
        <description>Captures related event ID</description>
        <label>Event ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Name__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Event__r.Id, Event__r.Event_Name__c, &quot;_self&quot;)</formula>
        <label>Event Name (dep)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event (dep)</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expected_Amount__c</fullName>
        <description>Expected amount for transaction.  This does not based on payment.</description>
        <inlineHelpText>Expected amount for transaction, this is not based on the payments received.</inlineHelpText>
        <label>Expected Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Exported__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exported</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_Trans_ID__c</fullName>
        <externalId>true</externalId>
        <label>External Transaction ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Foundation_Credit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Deprecated - all soft credits are managed via Soft Credit object</description>
        <inlineHelpText>Deprecated - all soft credits are managed via Soft Credit object</inlineHelpText>
        <label>Foundation Credit</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Transactions (Foundation Credit)</relationshipLabel>
        <relationshipName>Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Gateway__c</fullName>
        <description>To support both UK and NA donation processing.</description>
        <label>Gateway</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GiftBatch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Gift Batch that is related to gift</description>
        <label>Gift Batch</label>
        <referenceTo>Gift_Batch__c</referenceTo>
        <relationshipLabel>Gifts</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Gift_Aid_Left_to_Claim__c</fullName>
        <formula>Total_Gift_Aid_Eligible_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gift-Aid Left to Claim</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gift_Batch_ID__c</fullName>
        <formula>GiftBatch__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gift Batch ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gift_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gift Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gift_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gift_Type__c</fullName>
        <label>Gift Type</label>
        <picklist>
            <picklistValues>
                <fullName>One Time Gift</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Recurring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pledge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gift-in-Kind</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sponsorship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Sponsorship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event Registration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Sale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grant</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HouseholdId__c</fullName>
        <formula>Constituent__r.Household__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HouseholdId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Household__c</fullName>
        <description>Household the individual belongs to</description>
        <formula>HYPERLINK(&quot;/&quot; &amp; Constituent__r.Household__c, Constituent__r.Household__r.Name,&quot;_self&quot;)</formula>
        <inlineHelpText>Household the individual belongs to</inlineHelpText>
        <label>Household</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_Solicitor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Internal Solicitor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Key_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Key Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Organization__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Memberships (Key Contact)</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Payment_Date__c</fullName>
        <description>Date of last payment - for recurring payments.</description>
        <label>Last Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Pledge_Payment__c</fullName>
        <description>Date of last pledge payment</description>
        <inlineHelpText>Date of last pledge payment</inlineHelpText>
        <label>Last Pledge Payment</label>
        <summarizedField>Payment__c.Date__c</summarizedField>
        <summaryFilterItems>
            <field>Payment__c.Status__c</field>
            <operation>equals</operation>
            <value>Approved, Deposited</value>
        </summaryFilterItems>
        <summaryForeignKey>Payment__c.Donation__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Letter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Letter</label>
        <referenceTo>Letter__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Matched_Gift__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to matched gift from employee</description>
        <inlineHelpText>Reference to matched gift from employee</inlineHelpText>
        <label>Matched Gift</label>
        <referenceTo>Gift__c</referenceTo>
        <relationshipLabel>Matched Gifts</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Next_Payment_Date__c</fullName>
        <description>Date of next payment - for recurring payments.</description>
        <label>Next Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Payment_Due__c</fullName>
        <description>This is the next payment date expected from this pledge</description>
        <inlineHelpText>This is the next payment date expected from this pledge</inlineHelpText>
        <label>Next Payment Due</label>
        <summarizedField>Payment__c.Date__c</summarizedField>
        <summaryFilterItems>
            <field>Payment__c.Status__c</field>
            <operation>equals</operation>
            <value>Committed, Pending</value>
        </summaryFilterItems>
        <summaryForeignKey>Payment__c.Donation__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>No_of_Expected_Payments__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Number of expected payments for pledge</description>
        <inlineHelpText>Number of expected payments for pledge</inlineHelpText>
        <label># of Expected Payments</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Outstanding_Payments__c</fullName>
        <description>Number of outstanding payments: Expected Payments - (Received Payments + Written Off Payments)

If Outstanding Amount = $0, then Outstanding Payments set to 0</description>
        <formula>IF( Outstanding_Amount__c  = 0, 0, 
  IF ((No_of_Expected_Payments__c  -  Number_of_Payments__c -    No_of_Written_Off_Payments__c) &lt; 0, 0,
      No_of_Expected_Payments__c  -  Number_of_Payments__c -  No_of_Written_Off_Payments__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText># of Expected Payments - (# of Received Payments + # Written Off Payments)

If Outstanding Amount = $0, then Outstanding Payments set to 0</inlineHelpText>
        <label># of Outstanding Payments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Written_Off_Payments__c</fullName>
        <description>Rollup count of payments with status = Written Off</description>
        <inlineHelpText>Total number of written off payments</inlineHelpText>
        <label># of Written Off Payments</label>
        <summaryFilterItems>
            <field>Payment__c.Status__c</field>
            <operation>equals</operation>
            <value>Written Off</value>
        </summaryFilterItems>
        <summaryForeignKey>Payment__c.Donation__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Payments__c</fullName>
        <description>Total number of payment records.</description>
        <inlineHelpText>Total number of payment records</inlineHelpText>
        <label># of Received Payments</label>
        <summaryFilterItems>
            <field>Payment__c.Status__c</field>
            <operation>equals</operation>
            <value>Approved, Deposited</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Payment__c.Amount__c</field>
            <operation>notEqual</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>Payment__c.Donation__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Outstanding_Amount__c</fullName>
        <description>Total outstanding amount.  Expected Amount - (Approved Amount + Write Off Amount)</description>
        <formula>IF (Amount__c &gt;  Expected_Amount__c ,0,Expected_Amount__c - (Amount__c +  Write_Off_Amount__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Expected Amount - (Approved Amount + Write Off Amount)</inlineHelpText>
        <label>Outstanding Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Package_Name__c</fullName>
        <label>Package Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Package__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Package</label>
        <referenceTo>Package__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Count__c</fullName>
        <description>Total number of non declined payments.  Used for reconciliation against Allocations.</description>
        <label>Payment Count</label>
        <summaryFilterItems>
            <field>Payment__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Declined</value>
        </summaryFilterItems>
        <summaryForeignKey>Payment__c.Donation__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Payment_Withdrawal_Day__c</fullName>
        <description>Recurring Gift - day of each month payment will be automatically processed</description>
        <formula>if(ISBLANK (Recurring_Donation__r.New_Payment_Start_Date__c),DAY(Recurring_Donation__r.Start_Date__c ),DAY(Recurring_Donation__r.New_Payment_Start_Date__c) )</formula>
        <inlineHelpText>Recurring Gift - day of each month payment will be automatically processed</inlineHelpText>
        <label>Payment Withdrawal Day</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Per_Payment_Amount__c</fullName>
        <description>Defines fixed amount of each pledge payment</description>
        <inlineHelpText>Defines fixed amount of each pledge payment</inlineHelpText>
        <label>Per Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pledge_Payment_Frequency__c</fullName>
        <description>Defines the frequency of pledge payment</description>
        <inlineHelpText>Defines the frequency of pledge payment</inlineHelpText>
        <label>Pledge Payment Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bi-Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annually</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pledge_Start_Date__c</fullName>
        <description>Pledge payment start date</description>
        <inlineHelpText>Pledge payment start date</inlineHelpText>
        <label>Pledge Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Primary_Solicitor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Deprecated - all soft credits are managed via Soft Credit object</description>
        <inlineHelpText>Deprecated - all soft credits are managed via Soft Credit object</inlineHelpText>
        <label>Primary Solicitor</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Transactions (Primary Solicitor)</relationshipLabel>
        <relationshipName>Gifts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Promotion_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The promotional code that was applied to this transaction</description>
        <label>Promotion Code</label>
        <referenceTo>Promotion_Code__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Proposal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Proposal</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Gifts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Receipt_Later__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Receipt will not be created if checked.  Receipt to be created at a later date.</description>
        <inlineHelpText>Receipt will not be created if checked.  Receipt to be created at a later date.</inlineHelpText>
        <label>Receipt Later</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Receipt_Type__c</fullName>
        <label>Receipt Type</label>
        <picklist>
            <picklistValues>
                <fullName>Single Receipt</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No Receipt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consolidated</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Recurring_Donation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recurring Gift</label>
        <referenceTo>Recurring_Donation__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recurring_Frequency__c</fullName>
        <formula>TEXT(Recurring_Donation__r.Frequency__c)</formula>
        <label>Recurring Frequency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recurring_Start_Date__c</fullName>
        <formula>Recurring_Donation__r.Start_Date__c</formula>
        <label>Recurring Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reference__c</fullName>
        <inlineHelpText>Recurring payment Id</inlineHelpText>
        <label>Reference #</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remaining_Payments__c</fullName>
        <formula>IF((Recurring_Donation__r.of_Payments__c -  Number_of_Payments__c) &gt; 0, (Recurring_Donation__r.of_Payments__c -  Number_of_Payments__c), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Payments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Search_Key__c</fullName>
        <description>Used to support Salesforce searching since Individual/Organization lookup fields are searched.</description>
        <label>Search Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <description>Defines originating source of transaction</description>
        <inlineHelpText>Defines originating source of transaction</inlineHelpText>
        <label>Source</label>
        <picklist>
            <picklistValues>
                <fullName>Offline Entry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online Actionpage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fundly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Karma411</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UNX Vision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sponsorship_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Defines amount of transaction that is related to sponsorships (not eligible for tax receipt)</description>
        <inlineHelpText>Defines amount of transaction that is related to sponsorships (not eligible for tax receipt)</inlineHelpText>
        <label>Sponsorship/Benefit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Entered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acknowledged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Stock_Sale_Date__c</fullName>
        <description>Date stock was converted to Cash</description>
        <inlineHelpText>Date stock was converted to Cash</inlineHelpText>
        <label>Stock Sale Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Stock_Value__c</fullName>
        <description>Dollar value of stock at time received</description>
        <inlineHelpText>Dollar value of stock at time received</inlineHelpText>
        <label>Stock Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sys_Clone_Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>_Sys:Clone Transaction</label>
        <referenceTo>Gift__c</referenceTo>
        <relationshipLabel>Clone Transactions</relationshipLabel>
        <relationshipName>CloneTransactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Attendees_Purchased__c</fullName>
        <description>Sum of included event attendees based on event levels purchased</description>
        <inlineHelpText>Sum of included event attendees based on event levels purchased</inlineHelpText>
        <label>Total Attendees</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_GA_Claimed__c</fullName>
        <label>Total GA Claimed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_GA_Eligible_Allocations__c</fullName>
        <label>Total GA Eligible Allocations</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Gift_Aid_Eligible_Amount__c</fullName>
        <label>Total Gift-Aid Eligible Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Gift_Amount__c</fullName>
        <formula>Amount__c -  Sponsorship_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Gift Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Payment_Amount__c</fullName>
        <description>Total payment roll-up amount (includes Approved and Committed payments)</description>
        <inlineHelpText>Sum of all payments (includes Approved and Committed payments)</inlineHelpText>
        <label>Total Payment Amount</label>
        <summarizedField>Payment__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Payment__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Declined, Pending, Voided</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Payment__c.Amount__c</field>
            <operation>notEqual</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>Payment__c.Donation__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Tribute_Honoree_Name__c</fullName>
        <description>Name of tribute honoree</description>
        <label>Tribute Honoree Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tribute_Message__c</fullName>
        <description>Message to accompany tribute notification</description>
        <label>Tribute Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>